--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
+<!DOCTYPE html>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <title>Weather Assistant</title>
+  <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto:300,400,700&amp;display=swap'><link rel="stylesheet" href="./style.css">
 
+</head>
+<body>
+<!-- partial:index.partial.html -->
+<section class="top-banner">
+  <div class="container">
+    <form>
+      <input type="text" placeholder="Search for a city" autofocus>
+      <button type="submit"><i class="fas fa-search"></i> Search</button>
+      <span class="msg"></span>
+    </form>
+  </div>
+</section>
+<section class="ajax-section">
+  <div class="container">
+    <ul class="cities"></ul>
+  </div>
+</section>
+<footer class="page-footer">
+  <div class="container-city">
+  </div>
+</footer>
+<!-- partial -->
+  <script  src="./script.js"></script>
+  <script src="https://kit.fontawesome.com/65cd53e63d.js" crossorigin="anonymous"></script>
+</body>
+</html>
